# DamasBrasil

./: .gitattributes  CMakeLists.txt  Explicacao_Funcoes.md  README.md  criar_deb.sh  damas_ai.cpp  damas_ai.hpp  damas_core.cpp  damas_core.hpp  damas_dxp.cpp  damas_dxp.hpp  main.cpp  patriotas_1.0_amd64.deb  patriotas_1.1_amd64.deb
db/: 0101.lbnz  0201.lbnz  0202.lbnz  0210.lbnz  0301.lbnz  0302.lbnz  0303.lbnz  0310.lbnz  0311.lbnz  0320.lbnz  0401.lbnz  0410.lbnz  1001.lbnz  1010.lbnz  1101.lbnz  1102.lbnz  1110.lbnz  1111.lbnz  1201.lbnz  1202.lbnz  1203.lbnz  1210.lbnz  1211.lbnz  1212.lbnz  1220.lbnz  1301.lbnz  1310.lbnz  2001.lbnz  2002.lbnz  2010.lbnz  2011.lbnz  2020.lbnz  2101.lbnz  2102.lbnz  2103.lbnz  2110.lbnz  2111.lbnz  2112.lbnz  2120.lbnz  2121.lbnz  (+18 more)
patriotas_1.0_amd64/DEBIAN/: control
patriotas_1.0_amd64/usr/share/applications/: patriotas.desktop
patriotas_1.1_amd64/DEBIAN/: control  postinst
patriotas_1.1_amd64/opt/patriotas/: patriotas
patriotas_1.1_amd64/usr/share/applications/: patriotas.desktop
